--- a/.github/workflows/Windows Cloud PC - Anydesk.yml
+++ b/.github/workflows/Windows Cloud PC - Anydesk.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-    timeout-minutes: 9999
+    timeout-minutes: 0
     
     steps:
       - name: Downloading & Installing Essentials
@@ -19,4 +19,4 @@ jobs:
         run: cmd /c start.bat
 
       - name: Time Counter
-        run: Start-Sleep -Seconds 0
+        run: Start-Sleep -Seconds of 7464746447464734647647484849494948474747464747474747547468374
