--- a/.github/workflows/Windows Cloud PC - Anydesk.yml
+++ b/.github/workflows/Windows Cloud PC - Anydesk.yml
@@ -19,4 +19,4 @@ jobs:
         run: cmd /c start.bat
 
       - name: Time Counter
-        run: Start-Sleep -Seconds of 7464746447464734647647484849494948474747464747474747547468374
+        run: Start-Sleep -Seconds of 99999
