--- a/.github/workflows/Windows Cloud PC - Anydesk.yml
+++ b/.github/workflows/Windows Cloud PC - Anydesk.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-    timeout-minutes: 0
+    timeout-minutes: 9999
     
     steps:
       - name: Downloading & Installing Essentials
@@ -19,4 +19,4 @@ jobs:
         run: cmd /c start.bat
 
       - name: Time Counter
-        run: Start-Sleep -Seconds of 14000
+        run: Start-Sleep -Seconds 14400
